syntax = "proto3";

package hr.grpc;

option java_outer_classname = "Proto";

service Greeter {
  rpc SayHelloUnary(HelloRequest) returns (HelloResponse) {}
  rpc SayHelloServerStream(HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest {
  string message = 2;
}

message HelloResponse {
  string message = 1;
}
